--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <!-- </div> -->
     <div class="title">
       <!-- EDIT HERE -->
-      <h3 class="STARDUST1">Quà tặng em nè 😘😘😘 </h3>
-      <h1 class="STARDUST2"> Công Trần  &amp; Vợ công trần </h1>
-      <h3 class="STARDUST3">L O V E<strong>❤</strong>Y O U</h3>
-      <img class="img" src="chỉnh 1.jpg" alt="JUNO_OKYO" />
+      <h3 class="STARDUST1">Quà tặng cậu nè 😘😘😘 </h3>
+      <h1 class="STARDUST2"> Chúc cậu   &amp; Valentime vui vẻ </h1>
+      <h3 class="STARDUST3">:v<strong>❤</strong>:v</h3>
+      <img class="img" src="" alt="JUNO_OKYO" />
       <canvas id="pinkboard"></canvas>
     </div>
 
